--- a/index.html
+++ b/index.html
@@ -1,42 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>College Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Student Department System</title>
+  <link rel="stylesheet" href="design.css">
+  <script>
+    if (localStorage.getItem("token")) {
+      window.location.href = "dashboard.html";
+    }
+  </script>
 </head>
 <body>
 
-  <div class="navbar">
-    <h2>🎓 College Management</h2>
-  </div>
+  <div class="card large">
+    <h1>Student Department System</h1>
+    <p class="subtitle">Manage students and departments securely</p>
 
-  <div class="container">
-    <div class="card" onclick="go('signup.html')">
-      <h3>Signup</h3>
-      <p>Create new user</p>
-    </div>
-
-    <div class="card" onclick="go('login.html')">
-      <h3>Login</h3>
-      <p>User login</p>
-    </div>
-
-    <div class="card" onclick="go('department.html')">
-      <h3>Departments</h3>
-      <p>Manage departments</p>
-    </div>
-
-    <div class="card" onclick="go('student.html')">
-      <h3>Students</h3>
-      <p>Manage students</p>
+    <div class="btn-group">
+      <a href="login.html" class="btn">Login</a>
+      <a href="signup.html" class="btn outline">Signup</a>
     </div>
   </div>
-
-  <script>
-    function go(page) {
-      window.location.href = page;
-    }
-  </script>
 
 </body>
 </html>
