--- a/login.html
+++ b/login.html
@@ -3,23 +3,25 @@
 <head>
   <title>Login</title>
   <link rel="stylesheet" href="design.css">
-
 </head>
 <body>
 
-  <h2>Login Page</h2>
+  <div class="card small">
+    <h2>Login</h2>
 
-  <input id="login_username" placeholder="Username"><br><br>
-  <input id="login_password" type="password" placeholder="Password"><br><br>
+    <input id="login_username" placeholder="Username">
+    <input id="login_password" type="password" placeholder="Password">
 
-  <button onclick="login()">Login</button>
+    <button class="btn full" onclick="login()">Login</button>
 
-  <p id="login_msg"></p>
+    <p id="login_msg" class="msg"></p>
 
-  <!-- connect JavaScript -->
+    <p class="switch">
+      Don’t have an account?
+      <a href="signup.html">Signup</a>
+    </p>
+  </div>
+
   <script src="script.js"></script>
-
 </body>
 </html>
-
-
