--- a/signup.html
+++ b/signup.html
@@ -3,16 +3,24 @@
 <head>
   <title>Signup</title>
   <link rel="stylesheet" href="design.css">
-
 </head>
 <body>
 
-  <input id="username" placeholder="Username">
-  <input id="password" type="password" placeholder="Password">
+  <div class="card small">
+    <h2>Create Account</h2>
 
-  <button onclick="signup()">Signup</button>
+    <input id="username" placeholder="Username">
+    <input id="password" type="password" placeholder="Password">
 
-  <p id="msg"></p>
+    <button class="btn full" onclick="signup()">Signup</button>
+
+    <p id="msg" class="msg"></p>
+
+    <p class="switch">
+      Already have an account?
+      <a href="login.html">Login</a>
+    </p>
+  </div>
 
   <script src="script.js"></script>
 </body>
