--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
 <body>
 
   <header class="topbar">
-    <h1>Student Department Dashboard</h1>
+    <h1>Student Department college Management</h1>
     <button class="btn outline" onclick="logout()">Logout</button>
   </header>
 
@@ -37,4 +37,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+</html> 
+
