--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Student Department System</title>
   <link rel="stylesheet" href="design.css">
+
   <script>
     if (localStorage.getItem("token")) {
       window.location.href = "dashboard.html";
