--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Dashboard</title>
 
   <link rel="stylesheet" href="design.css">
@@ -13,30 +14,19 @@
 <body>
 
   <header class="topbar">
-    <h1>Student Department college Management</h1>
-    <button class="btn outline" onclick="logout()">Logout</button>
+    <h1>Student Department College Management</h1>
+    <button class="btn outline" type="button" onclick="logout()">Logout</button>
   </header>
 
   <div class="dashboard">
 
     <div class="panel">
       <h3>Departments</h3>
-      <input id="dept_name" placeholder="Department name">
-      <button class="btn full" onclick="addDepartment()">Add Department</button>
-      <ul id="dept_list"></ul>
-    </div>
-
-    <div class="panel">
-      <h3>Students</h3>
-      <input id="student_name" placeholder="Student name">
-      <select id="department_select"></select>
-      <button class="btn full" onclick="addStudent()">Add Student</button>
-      <ul id="student_list"></ul>
-    </div>
-
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html> 
-
+      <input
+        id="dept_name"
+        type="text"
+        placeholder="Department name"
+        required
+      >
+      <button
+        class="btn full"
