--- a/signup.html
+++ b/signup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Signup</title>
   <link rel="stylesheet" href="design.css">
 </head>
@@ -9,10 +10,10 @@
   <div class="card small">
     <h2>Create Account</h2>
 
-    <input id="username" placeholder="Username">
-    <input id="password" type="password" placeholder="Password">
+    <input id="username" type="text" placeholder="Username" required>
+    <input id="password" type="password" placeholder="Password (min 4 chars)" required>
 
-    <button class="btn full" onclick="signup()">Signup</button>
+    <button class="btn full" onclick="signup(event)">Signup</button>
 
     <p id="msg" class="msg"></p>
 
